--- a/Web.UI/Views/Research/DateProblemsReport.cshtml
+++ b/Web.UI/Views/Research/DateProblemsReport.cshtml
@@ -1,5 +1,4 @@
-﻿<link rel="stylesheet" href="~/Content/css/lib/research/bootstrap-table.min.css">
-<div class ="report-table">
+﻿<div class ="report-table">
     <table id="dateProblemsReportTable"
            data-toggle="table"
            data-height="800"
