--- a/Web.UI/Views/Research/Research.cshtml
+++ b/Web.UI/Views/Research/Research.cshtml
@@ -27,7 +27,7 @@
                 <div class="col-md-4">
                     <div class="promo-box">
                         <a id="findPerson" href="#">
-                            <span class="fa fmf-family64"></span>
+                            <span class="fa fmf-search64"></span>
                             <strong>Find Person</strong>
                         </a>
                         <p>This utility provides a valuable find person utility that provides links to popular family history web sites (Ancestry, FindAGrave, MyHeritage, Puzilla, etc.) for research</p>
