--- a/Web.UI/Views/Research/PlaceProblemsReport.cshtml
+++ b/Web.UI/Views/Research/PlaceProblemsReport.cshtml
@@ -15,7 +15,7 @@
            data-single-select="false">
         <thead>
             <tr>
-                <th data-field="Name" data-formatter="nameFormatter" data-events="nameEvents">Name</th>
+                <th data-field="Name" data-formatter="nameFormatter" data-events="nameEvents" class="name-colom">Name</th>
                 <th data-field="BirthPlace" data-formatter="placeProblemsFormatter">Birth</th>
                 <th data-field="DeathPlace" data-formatter="placeProblemsFormatter">Death</th>
                 <th data-field="MarriagePlace" data-formatter="placeProblemsFormatter">Marriage</th>
@@ -29,7 +29,17 @@
 <div class="text-center">
     <button id="placeProblemsReportSaveButton" class ="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class ="fa fmf-save24 dialog-buttons"></i> Save </button>
     <button type='button' id="placeProblemsReportOptionsButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-options24 dialog-buttons"></i> Options </button>
-    <button type='button' id="placeProblemsReportHelpButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-help24 dialog-buttons"></i> Help </button>
+                <div class="btn-group">
+                    <button type="button" id="placeProblemsReportHelpButton" class=" btn-u btn-brd btn-brd-hover rounded btn-u-blue btn btn-primary dropdown-toggle" data-toggle="dropdown" data-style="expand-left">
+                        <i class="fa fmf-help24 dialog-buttons"></i>
+                        Help
+                        <i class="fa fa-angle-up"></i>
+                    </button>
+                    <ul class="dropdown-menu help-dropdown" role="menu">
+                        <li><a href="#">Video</a></li>
+                        <li><a href="#">Tutorial</a></li>
+                    </ul>
+                </div>
     <button type='button' id="placeProblemsReportCloseButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Close </button>
 </div>
 </div>
