--- a/Web.UI/Views/Research/Feedback.cshtml
+++ b/Web.UI/Views/Research/Feedback.cshtml
@@ -8,25 +8,30 @@
         <div class="right-section">
             <div class="form-group">
                 <div class="col-sm-12">
-                    <div class="radio">
-                        <label><input type="radio" id="feedbackBug" name="optradio">Bug</label>&nbsp;&nbsp;
-                        <label><input type="radio" id="feedbackFeatureRequest" name="optradio">Feature Request</label>&nbsp;&nbsp;
-                        <label><input type="radio" id="feedbackOther" name="optradio">Other</label>
+                    <p>The feedback is anonymous, so include your email address if you would like a reply.</p>
+                </div>
+            </div>
+                <div class="form-group">
+                    <div class="col-sm-12">
+                        <div class="radio">
+                            <label><input type="radio" id="feedbackBug" name="optradio">Bug</label>&nbsp;&nbsp;
+                            <label><input type="radio" id="feedbackFeatureRequest" name="optradio">Feature Request</label>&nbsp;&nbsp;
+                            <label><input type="radio" id="feedbackOther" name="optradio">Other</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-12">
+                        <textarea class="form-control feedback-textarea" id="feedbackMessage" name="message" placeholder="Message"></textarea>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-12">
+                        <input name="email" id="feedbackEmail" placeholder="Email Address" class="form-control" type="text">
                     </div>
                 </div>
             </div>
-            <div class="form-group">
-                <div class="col-sm-12">
-                    <textarea class="form-control feedback-textarea" id ="feedbackMessage" name="message" placeholder="Message"></textarea>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-12">
-                    <input name="email" id="feedbackEmail" placeholder="Email Address" class="form-control" type="text">
-                </div>
-            </div>
-        </div>
-    </fieldset>
+</fieldset>
         <div class="col-lg-12">
             <hr />
             <div class="text-center">
