--- a/Web.UI/Content/css/main.css
+++ b/Web.UI/Content/css/main.css
@@ -2,5 +2,8 @@
 @import url('lib/common/bootstrap3.2.0.css');
 @import url('lib/common/font-awesome-4.3.0/css/font-awesome.min.css');
 
+/*Import Google Font*/
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400);
+
 /* Application stylesheets */
 @import url('../../Content/css/style.css');
