--- a/Web.UI/Content/css/style.css
+++ b/Web.UI/Content/css/style.css
@@ -1,6 +1,3 @@
-/*Import Google Font*/
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400);
-
 body { 
    color: #333; 
    font-size: 13px;
@@ -732,6 +729,11 @@ h1 i, h2 i, h3 i, h4 i, h5 i, h6 i {
     .header .navbar-header {
         float: none;
     }
+}
+.btn-slider {
+    width: auto;
+    height: auto;
+    font-size: 1.1vw;
 }
 
 @media (min-width: 767px) and (max-width: 991px) {
