--- a/Web.UI/Views/Home/Index.cshtml
+++ b/Web.UI/Views/Home/Index.cshtml
@@ -9,25 +9,25 @@
 
 <div class="tp-banner-container">
 
-    <div id="layerslider" style="width: 1281px; height: 547px !important; max-width: 1281px;">
-        <div class="ls-slide fmf-bg2" style="height: 500px !important" data-ls="slidedelay:5500;transition2d:11;">
+    <div id="layerslider" style="width: 1281px; height: 547px; max-width: 1281px;">
+        <div class="ls-slide fmf-bg2" style="height: 500px " data-ls="slidedelay:5500;transition2d:11;">
             <img class="ls-l" style="top: 57%; left: 69%; width: 525.5px; height: 605px; white-space: nowrap;"
                  data-ls="offsetxin:900;offsetyin:25;durationin:4000;delayin:300;easingin:easeOutQuart;fadein:false;offsetxout:2400;offsetyout:-400;durationout:1000;easingout:easeInQuart;fadeout:false;scalexout:0.9;scaleyout:0.9;"
                  src="/Images/findmyfamilies_new1-2.png" alt="">
 
-            <div class="ls-l" style="top: 114px; left: 202px; letter-spacing: -2px; position: absolute; color: #fff; text-shadow: none; font-weight: 700; font-size: 65px; line-height: 65px; font-family: 'Arial'; margin: 0px; border-width: 0px; border-style: none; white-space: nowrap; text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);"
-                 data-ls="offsetxin:0;offsetyin:top;delayin:500;easingin:easeOutQuint;fadein:false;rotatein:-90;offsetxout:0;offsetyout:top;durationout:750;fadeout:false;rotateout:-90;">Best Tool</div>
-            <div class="ls-l" style="top: 199px; left: 230px; position: absolute; color: #fff; text-shadow: none; font-weight: 700; font-size: 44px; line-height: 44px; font-family: 'Arial'; margin: 0px; border-width: 0px; border-style: none; white-space: nowrap; text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);"
-                 data-ls="offsetxin:0;offsetyin:top;delayin:500;easingin:easeOutQuint;fadein:false;rotatein:-90;offsetxout:0;offsetyout:top;durationout:750;fadeout:false;rotateout:-90;">for finding</div>
-            <div class="ls-l" style="top: 263px; left: 136px; letter-spacing: -2px; position: absolute; color: #72c02c; text-shadow: none; font-weight: 700; font-size: 65px; line-height: 65px; font-family: 'Arial'; margin: 0px; border-width: 0px; border-style: none; white-space: nowrap; text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);"
-                 data-ls="offsetxin:0;offsetyin:top;delayin:500;easingin:easeOutQuint;fadein:false;rotatein:-90;offsetxout:0;offsetyout:top;durationout:750;fadeout:false;rotateout:-90;">Family Names</div>
-            <div class="ls-l" style="top: 375px; left: 253px; position: absolute;"
+            <h5 class="ls-l" style="top: 114px; left: 202px; letter-spacing: -2px; position: absolute; color: #fff; text-shadow: none; font-weight: 700; font-size: 65px; line-height: 65px; font-family: 'Arial'; margin: 0px; border-width: 0px; border-style: none; white-space: nowrap; text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);"
+                 data-ls="offsetxin:0;offsetyin:top;delayin:500;easingin:easeOutQuint;fadein:false;rotatein:-90;offsetxout:0;offsetyout:top;durationout:750;fadeout:false;rotateout:-90;">Best Tool</h5>
+            <h3 class="ls-l" style="top: 199px; left: 26%; letter-spacing: 0px; position: absolute; color: #fff; text-shadow: none; font-weight: 700; font-size: 44px; line-height: 44px; font-family: 'Arial'; margin: 0px; border-width: 0px; border-style: none; white-space: nowrap; text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);"
+                 data-ls="offsetxin:0;offsetyin:top;delayin:500;easingin:easeOutQuint;fadein:false;rotatein:-90;offsetxout:0;offsetyout:top;durationout:750;fadeout:false;rotateout:-90;">for finding</h3>
+            <h5 class="ls-l" style="top: 263px; left: 136px; letter-spacing: -2px; position: absolute; color: #72c02c; text-shadow: none; font-weight: 700; font-size: 65px; line-height: 65px; font-family: 'Arial'; margin: 0px; border-width: 0px; border-style: none; white-space: nowrap; text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);"
+                 data-ls="offsetxin:0;offsetyin:top;delayin:500;easingin:easeOutQuint;fadein:false;rotatein:-90;offsetxout:0;offsetyout:top;durationout:750;fadeout:false;rotateout:-90;">Family Names</h5>
+            <h5 class="ls-l " style="top: 375px; left: 26.5%; font-size: 24px; position: absolute;"
                  data-ls="offsetxin:-50;durationin:2000;delayin:1000;offsetxout:-50;durationout:1000;">
-                <a class="btn btn-default btn-success btn-u-lg" href="@Url.Action("Research", "Home")"><i class="fa color-light fa-wrench"></i><span style="color: floralwhite;">  Start Now</span></a>
-            </div>
+                <a class="btn btn-success btn-slider" href="@Url.Action("Research", "Home")"><i class="fa color-light fa-wrench"></i><span style="color: floralwhite;">  Start Now</span></a>
+            </h5>
 
         </div>
-        <div class="ls-slide fmf-bg5" style="height: 500px !important" data-ls="slidedelay:5500;transition2d:11;" >
+        <div class="ls-slide fmf-bg5" style="height: 500px " data-ls="slidedelay:5500;transition2d:11;" >
             <img class="ls-l" style="top: 46%; left: 74%; width: 650px; height: 390px; white-space: nowrap;"
                  data-ls="offsetxin:900;offsetyin:25;durationin:4000;delayin:390;easingin:easeOutQuart;fadein:false;offsetxout:2400;offsetyout:-400;durationout:1000;easingout:easeInQuart;fadeout:false;scalexout:0.9;scaleyout:0.9;"
                  src="/Images/Computer2.png" alt="">
@@ -37,17 +37,17 @@
             <span class="ls-l" style="top:189px;left:125px; font-weight: 200; line-height: 22px;font-size:24px; color:#fff; white-space: nowrap;" data-ls="offsetxin:0;offsetyin:bottom;durationin:750;delayin:2000;easingin:easeOutQuint;fadein:false;scalexin:0.5;scaleyin:0.5;offsetxout:0;offsetyout:bottom;durationout:750;fadeout:false;">Provides helpful video, tutorials, and instructions</span>
             <span class="ls-l" style="top:243px;left:125px; font-weight: 200; line-height: 22px;font-size:24px; color:#fff; white-space: nowrap;" data-ls="offsetxin:0;offsetyin:bottom;durationin:750;delayin:2500;easingin:easeOutQuint;fadein:false;scalexin:0.5;scaleyin:0.5;offsetxout:0;offsetyout:bottom;durationout:750;fadeout:false;">Keys in on the most common problems</span>
             <span class="ls-l" style="top:299px;left:125px; font-weight: 200; line-height: 22px;font-size:24px; color:#fff; white-space: nowrap;" data-ls="offsetxin:0;offsetyin:bottom;durationin:750;delayin:3000;easingin:easeOutQuint;fadein:false;scalexin:0.5;scaleyin:0.5;offsetxout:0;offsetyout:bottom;durationout:750;fadeout:false;">Provides a complete summary for each search</span>
-            <div class="ls-l" style="top:76px;left:80px; line-height: 22px;" data-ls="offsetxin:-100;easingin:easeOutBack;fadein:false;scalexin:0.1;scaleyin:0.1;offsetxout:-100;durationout:750;delayin:1000;fadeout:false;scalexout:0.1;scaleyout:0.1;"><i class="fa fa-chevron-circle-right" style="color: #fff; font-size: 24px"></i></div>
-            <div class="ls-l" style="top:132px;left:80px; line-height: 22px;" data-ls="offsetxin:-100;easingin:easeOutBack;fadein:false;scalexin:0.1;scaleyin:0.1;offsetxout:-100;durationout:750;delayin:1500;fadeout:false;scalexout:0.1;scaleyout:0.1;"><i class="fa fa-chevron-circle-right" style="color: #fff; font-size: 24px"></i></div>
-            <div class="ls-l" style="top:187px;left:80px; line-height: 22px;" data-ls="offsetxin:-100;easingin:easeOutBack;fadein:false;scalexin:0.1;scaleyin:0.1;offsetxout:-100;durationout:750;delayin:2000;fadeout:false;scalexout:0.1;scaleyout:0.1;"><i class="fa fa-chevron-circle-right" style="color: #fff; font-size: 24px"></i></div>
-            <div class="ls-l" style="top:241px;left:80px; line-height: 22px;" data-ls="offsetxin:-100;easingin:easeOutBack;fadein:false;scalexin:0.1;scaleyin:0.1;offsetxout:-100;durationout:750;delayin:2500;fadeout:false;scalexout:0.1;scaleyout:0.1;"><i class="fa fa-chevron-circle-right" style="color: #fff; font-size: 24px"></i></div>
-            <div class="ls-l" style="top:296px;left:80px; line-height: 22px;" data-ls="offsetxin:-100;easingin:easeOutBack;fadein:false;scalexin:0.1;scaleyin:0.1;offsetxout:-100;durationout:750;delayin:3000;fadeout:false;scalexout:0.1;scaleyout:0.1;"><i class="fa fa-chevron-circle-right" style="color: #fff; font-size: 24px"></i></div>
-            <div class="ls-l" style="top: 394px; left: 175px; position: absolute;"
+            <h5 class="ls-l fa fa-chevron-circle-right" style="top:78px;left:80px; color: #fff; line-height: 22px; font-size: 26px" data-ls="offsetxin:-100;easingin:easeOutBack;fadein:false;scalexin:0.1;scaleyin:0.1;offsetxout:-100;durationout:750;delayin:1000;fadeout:false;scalexout:0.1;scaleyout:0.1;"></h5>
+            <h5 class="ls-l fa fa-chevron-circle-right" style="top:134px;left:80px; color: #fff; line-height: 22px; font-size: 26px" data-ls="offsetxin:-100;easingin:easeOutBack;fadein:false;scalexin:0.1;scaleyin:0.1;offsetxout:-100;durationout:750;delayin:1500;fadeout:false;scalexout:0.1;scaleyout:0.1;"></h5>
+            <h5 class="ls-l fa fa-chevron-circle-right" style="top:189px;left:80px; color: #fff; line-height: 22px; font-size: 26px" data-ls="offsetxin:-100;easingin:easeOutBack;fadein:false;scalexin:0.1;scaleyin:0.1;offsetxout:-100;durationout:750;delayin:2000;fadeout:false;scalexout:0.1;scaleyout:0.1;"></h5>
+            <h5 class="ls-l fa fa-chevron-circle-right" style="top:243px;left:80px; color: #fff; line-height: 22px; font-size: 26px" data-ls="offsetxin:-100;easingin:easeOutBack;fadein:false;scalexin:0.1;scaleyin:0.1;offsetxout:-100;durationout:750;delayin:2500;fadeout:false;scalexout:0.1;scaleyout:0.1;"></h5>
+            <h5 class="ls-l fa fa-chevron-circle-right" style="top:298px;left:80px; color: #fff; line-height: 22px; font-size: 26px" data-ls="offsetxin:-100;easingin:easeOutBack;fadein:false;scalexin:0.1;scaleyin:0.1;offsetxout:-100;durationout:750;delayin:3000;fadeout:false;scalexout:0.1;scaleyout:0.1;"></h5>
+            <h5 class="ls-l" style="top: 394px; left: 28%; position: absolute;"
                  data-ls="offsetxin:-50;durationin:2000;delayin:3000;offsetxout:-50;durationout:1000;">
-                <a class="btn-u btn-u-blue btn-u-lg" href="@Url.Action("SearchAncestry", "Home")"><i class="fa color-light fa-wrench"></i><span style="color: floralwhite;">  Take it for a Spin</span></a>
-            </div>
+                <a class="btn btn-primary btn-slider" href="@Url.Action("Research", "Home")"><i class="fa color-light fa-wrench"></i><span style="color: floralwhite;">  Take it for a Spin</span></a>
+            </h5>
         </div>
-        <div class="ls-slide fmf-img1" style="height: 500px !important" data-ls="slidedelay:5500;transition2d:21,105;timeshift:-1000;">
+        <div class="ls-slide fmf-img1" style="height: 500px " data-ls="slidedelay:5500;transition2d:21,105;timeshift:-1000;">
 
             <div class="ls-l" style="top: 60px; left: 50%; background: white; background: rgba(255, 255, 255, .2); box-shadow: 0px 5px 70px -20px black; width: 660px; height: 380px; white-space: nowrap;" data-ls="offsetxin:0;durationin:2000;delayin:1500;easingin:easeInOutExpo;rotatexin:20;scalexin:0.8;scaleyin:0.8;transformoriginin:50% 50% -150;offsetxout:0;durationout:1000;rotatexout:-20;scalexout:0.8;scaleyout:0.8;transformoriginout:50% 50% -150;">
             </div>
