--- a/Web.UI/Views/Research/FindPersonOptions.cshtml
+++ b/Web.UI/Views/Research/FindPersonOptions.cshtml
@@ -66,7 +66,7 @@
         <hr/>
         <div class="row" >
             <div class="text-center">
-                <button id="findPersonOptionSaveButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-save24 dialog-buttons"></i> Save</button>
+                <button id="findPersonOptionSaveButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left" type="button"><i class="fa fmf-save24 dialog-buttons"></i> Save</button>
                 <button id="findPersonOptionCloseButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left" type="button"><i class="fa fmf-close24 dialog-buttons"></i> Close</button>
             </div>
         </div>
