--- a/Web.UI/Views/Research/Research.cshtml
+++ b/Web.UI/Views/Research/Research.cshtml
@@ -5,6 +5,7 @@
 
 @section styles {
     <link rel="stylesheet" type="text/css" href="@Url.StyleSheet("research.css")" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400)">
 }
 
 <!--=== Breadcrumbs v3 ===-->
