Fixed the toggle issue.

--- a/Web.UI/Content/css/dialog.css
+++ b/Web.UI/Content/css/dialog.css
@@ -307,6 +307,9 @@ hr {
 .addChildren-box {
     width: 190px !important;
 }
+.decendants-input {
+    width: 70px;
+}
 
 .name-colom {
     width: 305px !important;
