--- a/Web.UI/Views/Shared/_Layout.cshtml
+++ b/Web.UI/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-responsive-collapse">
                             <span class="sr-only">Toggle navigation</span>
                             <span class="fa fa-bars"></span>
                         </button>
@@ -69,29 +69,29 @@
 
                             <li>@Html.ActionLink("Research", "Research", "Home")</li>
                             <!-- Search Block
-                                <li><a href="http://findmyfamilies.wordpress.com/">Blog</a></li>
+                <li><a href="http://findmyfamilies.wordpress.com/">Blog</a></li>
 
-                                <li>@Html.ActionLink("FAQs", "Faqs", "Home")</li>
+                <li>@Html.ActionLink("FAQs", "Faqs", "Home")</li>
 
-                                <li>@Html.ActionLink("Contacts", "Contacts", "Home")</li>
+                <li>@Html.ActionLink("Contacts", "Contacts", "Home")</li>
 
-                                <li>@Html.ActionLink("About Us", "About", "Home")</li>
+                <li>@Html.ActionLink("About Us", "About", "Home")</li>
 
-                                 -->
+                 -->
                             @*                            <li>@Html.ActionLink("Error Page", "Error", "Home")</li>*@
                             <!-- Search Block
-                                <li>
-                                    <i class="search fa fa-search search-btn"></i>
-                                    <div class="search-open">
-                                        <div class="input-group animated fadeInDown">
-                                            <input type="text" class="form-control" placeholder="Search">
-                                            <span class="input-group-btn">
-                                                <button class="btn-u" type="button">Go</button>
-                                            </span>
-                                        </div>
-                                    </div>
-                                </li>
-                                -->
+                <li>
+                    <i class="search fa fa-search search-btn"></i>
+                    <div class="search-open">
+                        <div class="input-group animated fadeInDown">
+                            <input type="text" class="form-control" placeholder="Search">
+                            <span class="input-group-btn">
+                                <button class="btn-u" type="button">Go</button>
+                            </span>
+                        </div>
+                    </div>
+                </li>
+                -->
                             <!-- End Search Block -->
                         </ul>
                     </div><!--/navbar-collapse-->
