--- a/Web.UI/Content/css/style.css
+++ b/Web.UI/Content/css/style.css
@@ -741,3 +741,42 @@ h1 i, h2 i, h3 i, h4 i, h5 i, h6 i {
 		margin-right: 0;
 	}
 }
+
+@media (max-width: 991px) {
+    .header .navbar-toggle {
+        display: block;
+    }
+    
+    .header .navbar-collapse.collapse {
+        display: none !important;
+    }
+    
+    .header .navbar-collapse.collapse.in {
+        display: block !important;
+  		overflow-y: auto !important;
+    }
+    
+    .header .navbar-nav {
+        margin: 0 0 5px;
+        float: none !important;
+    }
+
+    .header .navbar-nav > li {
+        float: none;
+    }
+
+	/*Dropdown Menu Slide Down Effect*/
+	.header .navbar-nav .open .dropdown-menu {
+		border: 0;
+		float: none;
+		width: auto;
+		margin-top: 0;
+		position: static;
+		box-shadow: none;
+		background-color: transparent;
+	}
+
+	.header .navbar-default .navbar-nav > li > a:hover {
+		color: #72c02c;
+	}
+}
